fix problems in OpenApi documentation. fix problem in adding Category, Source.
